--- a/scss/_sponsor.scss
+++ b/scss/_sponsor.scss
@@ -1,7 +1,7 @@
 // Sponsor
 .patrocinadores{
     width: $containerWidth;
-    max-width: $maxWidth;
+    max-width: 1050px;
     margin:  $sectionMargin;
     display:flex;
     flex-direction: column;
