--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -1,7 +1,7 @@
 // ContactUs
 .accordion{
     width: $containerWidth;
-    max-width: $maxWidth;
+    max-width: 1300px;
     height:auto;
     margin: $sectionMargin !important;
     .subtitle{
