--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,7 +1,7 @@
 // FormContainer
 .formContainer{
     width: $containerWidth;
-    max-width: $maxWidth;
+    max-width: 1300px;
     height: auto;
     margin:-50px auto 100px !important;
     text-align: center;
