--- a/scss/_jobs.scss
+++ b/scss/_jobs.scss
@@ -1,7 +1,7 @@
 // Jobs Developers & Designers
 .containerDevelopment, .containerDesign{
     width: $containerWidth;
-    max-width: $maxWidth;
+    max-width: 1050px;
     margin:  $sectionMargin;
 }
 .containerDevelopment{
