--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,7 +1,7 @@
 // Services
 .contenedorEmpleos{
     width: $containerWidth;
-    max-width: $maxWidth;
+    max-width: 1050px;
     margin: $sectionMargin !important;
     display: flex;
     flex-direction: column;
