--- a/views/error404.html
+++ b/views/error404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Empleos</title>
+    <title>Error404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google fonts poppins and press start 2p-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
